--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,12 +13,12 @@
 <body>
 <div class="container">
     <ul class="header">
-        <li>Trang chủ</li>
+        <li class="home" id="home-container">Trang chủ</li>
         <li>Hướng dẫn</li>
-        <li>Tra cứu</li>
+        <li class="search" id="search-container">Tra cứu</li>
         <li>Giới thiệu</li>
     </ul>
-    <div class="content">
+    <div class="content home-container">
         <div class="left-menu-bar">
             <div class="menu-content">
                 <h3>Tìm xe</h3>
@@ -80,6 +80,9 @@
 <!--            </div>-->
 
         </div>
+    </div>
+    <div class="search-container">
+        oke rồi
     </div>
 </div>
 </body>
