--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -39,7 +39,37 @@ div{
     margin-right: 100px;
 }
 
+.account ul{
 
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    top: 50px;
+    width: 150px;
+    right: 60px;
+    margin-right: 0px !important;
+    padding: 0px;
+    margin: 0px;
+    list-style: none;
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 2px;
+}
+.account li{
+    padding: 0px;
+    margin: 0px;
+    line-height: 20px;
+    width: 100%;
+    font-size: 14px;
+    color: black;
+}
+.account li:hover{
+    background-color: #003eff;
+    color: white;
+}
+.account:hover ul {
+    display: flex;
+ }
 .content{
     margin-top: 80px;
     height: calc(100vh - 80px);
@@ -49,7 +79,6 @@ div{
 .content .left-menu-bar{
     width: 200px;
     min-width: 100px;
-    /*background-color: blue;*/
     height: 100%;
     position: relative;
     margin: 0px;
@@ -104,6 +133,7 @@ h3{
     background-color: rgb(77, 5, 232);
     border-radius: 5px;
     cursor: pointer;
+    color: white;
 }
 
 
@@ -206,6 +236,15 @@ hr{
 .category i{
     background-image: url("../images/category-icon.png");
 }
+.owner i{
+    background-image: url('../images/admin-icon.png');
+}
+.owner-company i{
+    background-image: url('../images/company-icon.png');
+}
+.owner-email i{
+    background-image: url('../images/email-icon.jpg');
+}
 
 .icon{
     background-position: center;
@@ -240,3 +279,70 @@ button.let-rent:hover{
     transition: all 0.4s ease 0s;
 }
 
+.hidden{
+    display: none !important;
+}
+
+
+/* search */
+/*******************************************/
+.history-container,.info-container,.guide-container{
+    height: calc(100vh - 80px);
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(236, 236, 236, 1);
+    width: 70vw;
+    margin: 0 auto;
+    margin-top: 80px;
+    padding-top: 20px;
+    /*margin: 0 auto;*/
+}
+.rent-info-wrapper{
+    display: grid;
+    width: 100%;
+    height: 100px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    margin-top: 10px;
+}
+.rent-info-wrapper div{
+    border: 1px solid black;
+}
+
+/* customer info */
+
+/*********************************/
+.info-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+.customer-info-wrapper{
+    display: flex;
+    flex-direction: row;
+}
+.customer-info-wrapper div{
+    width: 200px;
+    height: 50px;
+    line-height: 50px;
+}
+.customer-info-wrapper input{
+    height: 30px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    padding-left: 5px;
+}
+.info-container .icon{
+    background-image: url("../images/edit-icon.png");
+    position: absolute;
+    right: 50px;
+    cursor: pointer;
+    background-color: white;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    box-shadow: 3px 3px 5px 3px #ccc;
+
+}
