--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -6,7 +6,7 @@
 }
 body{
     min-height: 100vh;
-    background-image: linear-gradient(120deg,rgba(46, 204, 113, 0.7),rgba(123, 239, 178, 0.5));
+
 
 }
 .login-form{
@@ -14,20 +14,20 @@ body{
     height: 250px;
     padding: 100px 40px;
     padding-top: 60px;
-
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 10px;
     background-color: white;
-
-
+    border: 1px solid blue;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 h1{
     text-align: center;
     margin-bottom: 40px;
     margin-top: 0px;
+    color: #003eff;
 
 }
 .js-txtb{
@@ -48,7 +48,7 @@ h1{
 .js-txtb span:before{
     content: attr(data-placeholder);
     position: absolute;
-    top: 50%;
+    top: -5px;
     left: 5px;
     color: #adadad;
     transform: translateY(-50%);
@@ -61,7 +61,7 @@ h1{
     height: 2px;
     width: 0;
     transition: .5s;
-    background-image: linear-gradient(120deg,rgba(123, 239, 178, 0.7),rgba(123, 239, 178, 0.5));
+    background-image: linear-gradient(120deg,rgba(77, 5, 232, 1),rgba(34, 167, 240, 1));
 }
 .focus + span:before{
     top: -5px;
@@ -77,7 +77,7 @@ h1{
     font-size: 20px;
     font-weight: 700;
     color: white;
-    background-image: linear-gradient(120deg,rgba(63, 195, 128, 1),rgba(102, 204, 153, 1));
+    background-image: linear-gradient(120deg,rgba(77, 5, 232, 1),rgba(34, 167, 240, 1));
     cursor: pointer;
 }
 .button-text{
