update for customer site

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -6,7 +6,12 @@
 }
 body{
     min-height: 100vh;
+    background-color: white !important;
 
+
+
+}
+.container{
 
 }
 .login-form{
@@ -86,3 +91,92 @@ h1{
     text-align: right;
     font-size: 13px;
 }
+
+/*dialog*/
+
+.ui-dialog-titlebar{
+    /*background-color: rgba(34, 167, 240, 1);*/
+    color: blue;
+    height: 100%;
+    border: none;
+    background-color: white;
+    border-bottom:  1px solid blue;
+}
+.ui-dialog-titlebar-close{
+    display: none;
+}
+.sign-up-container{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+}
+#sign-up-dialog p{
+    font-size: 14px;
+    color: red;
+    margin-bottom: 20px;
+}
+.sign-up-container .sign-up-wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 400px;
+    margin-top: 10px;
+    font-size: 16px;
+}
+.sign-up-container .sign-up-wrapper div{
+    width: 150px;
+    line-height: 20px;
+
+}
+.sign-up-container .sign-up-wrapper input{
+    height: 25px;
+
+}
+.sign-up-container .sign-up-wrapper input[type=radio]{
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: -2px;
+}
+.sign-up-button-wrapper{
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    right: 50px;
+    bottom: 90px;
+    width: 200px;
+    justify-content: space-around;
+    font-size: 15px;
+}
+.sign-up-button-wrapper button{
+    height: 25px;
+    width: 80px;
+    border: none;
+    background-color: rgb(58, 83, 155);
+    color: white;
+    border-radius: 2px;
+    cursor: pointer;
+}
+.sign-up-button-wrapper button:hover{
+    background: rgb(31, 58, 147);
+    letter-spacing: 0.5px;
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+    transition: all 0.4s ease 0s;
+}
+font{
+    color: red;
+}
+.warning{
+    height: 20px;
+    width: 20px;
+    background-image: url("../images/warning-icon.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: 10px 0px auto 10px;
+    background-position: center;
+    display: none;
+}
+
