--- a/src/main/resources/templates/submitForm.html
+++ b/src/main/resources/templates/submitForm.html
@@ -95,7 +95,7 @@
             <div class="form-main-customer-info">
                 <div class="infor-wrapper mustfill">
                     <div>Họ và tên</div>
-                    <input name="customerName" type="text" belong="customer" th:value="${customer.customerName}" readonly>
+                    <input name="name" type="text" belong="customer" th:value="${customer.name}" readonly>
                     <span class="warning"></span>
                 </div>
                 <div class="infor-wrapper mustfill">
@@ -109,7 +109,7 @@
                 </div>
                 <div class="infor-wrapper mustfill">
                     <div>Số điện thoại</div>
-                    <input name="customerPhone" type="text" belong="customer" th:value="${customer.customerPhone}" readonly>
+                    <input name="phone" type="text" belong="customer" th:value="${customer.phone}" readonly>
                     <span class="warning"></span>
                 </div>
                 <div class="infor-wrapper mustfill">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="infor-wrapper">
                     <div>Công ty</div>
-                    <input name="customerCompany" type="text" belong="customer" th:value="${customer.customerCompany}" readonly>
+                    <input name="companyName" type="text" belong="customer" th:value="${customer.companyName}" readonly>
                 </div>
                 <div class="infor-wrapper mustfill">
                     <div>Ngày sinh</div>
