--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -9,6 +9,36 @@ html,body{
     display: flex;
     flex-direction: column;
 }
+.red-border{
+    border: 1px solid red !important;
+}
+.no-border{
+    border: none !important;
+}
+.black-border{
+    border: 1px solid #bfbfbf !important;
+}
+button{
+    height: 30px;
+    width: 100px;
+    background-color: rgb(58, 83, 155);
+    border: 0px;
+    outline: none;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-right: 20px;
+    border-radius: 5px;
+}
+button:hover{
+    background: blue;
+    letter-spacing: 0.5px;
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+    transition: all 0.4s ease 0s;
+}
 div{
     padding: 0px;
     margin: 0px;
@@ -257,11 +287,11 @@ hr{
 }
 button.let-rent{
     position: absolute;
-    bottom: 20px;
+    bottom: 15px;
     height: 30px;
     width: 100px;
-    right: 30px;
-    background-color: rgb(58, 83, 155);
+    right: 20px;
+    background-color: blue;
     border: 0px;
     outline: none;
     color: white;
@@ -270,7 +300,7 @@ button.let-rent{
     font-family: Arial, Helvetica, sans-serif;
 
 }
-button.let-rent:hover{
+button.let-rent :hover{
     background: rgb(31, 58, 147);
     letter-spacing: 0.5px;
     -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
@@ -321,6 +351,7 @@ button.let-rent:hover{
 .customer-info-wrapper{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 .customer-info-wrapper div{
     width: 200px;
@@ -329,6 +360,7 @@ button.let-rent:hover{
 }
 .customer-info-wrapper input{
     height: 30px;
+    width: 250px;
     border: none;
     outline: none;
     font-size: 16px;
@@ -346,3 +378,64 @@ button.let-rent:hover{
     box-shadow: 3px 3px 5px 3px #ccc;
 
 }
+.info-button-wrapper{
+    display: none;
+    margin-top: 20px;
+    justify-content: flex-end;
+    width: 50%;
+    margin-right: 100px;
+}
+.info-button-wrapper button{
+    height: 30px;
+    width: 100px;
+    background-color: blue;
+
+
+}
+/*.info-button-wrapper button:hover{*/
+/*    background: rgb(31, 58, 147);*/
+/*    letter-spacing: 0.5px;*/
+/*    -webkit-box-shadow: 0px 5px 40px -10px rgba(255,255,255,0.57);*/
+/*    -moz-box-shadow: 0px 5px 40px -10px rgba(255,255,255,0.57);*/
+/*    box-shadow: 5px 40px -10px rgba(255,255,255,0.57);*/
+/*    transition: all 0.4s ease 0s;*/
+/*}*/
+.warning{
+    height: 20px;
+    width: 20px;
+    background-image: url("../images/warning-icon.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: 10px 0px auto 10px;
+    background-position: center;
+    opacity: 0;
+}
+.ui-dialog-titlebar{
+    background: #e9e9e900 !important;
+    border: none !important;
+}
+.ui-dialog-titlebar-close{
+    display: none !important;
+}
+
+#confirm-dialog{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+#confirm-dialog button{
+    margin-top: 20px;
+    background-color: blue;
+}
+#confirm-dialog div{
+    display: flex;
+    flex-direction: row;
+    line-height: 50px;
+}
+.success-icon{
+    background-image:  url('../images/success-icon.png');
+    width: 50px;
+    height: 50px;
+}
+
