--- a/car_rental/src/css/login.css
+++ b/car_rental/src/css/login.css
@@ -160,7 +160,7 @@ h1 {
   flex-direction: row;
   position: absolute;
   right: 50px;
-  bottom: 60px;
+  bottom: 30px;
   width: 200px;
   justify-content: space-around;
   font-size: 15px;
@@ -185,15 +185,18 @@ h1 {
 font {
   color: red !important ;
 }
-.form-register .warning {
+.sign-up-wrapper .warning {
   height: 20px;
   width: 20px;
   background-image: url("../images/warning-icon.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  margin: 10px 0px auto 10px;
+  margin: 0px 0px auto 5px;
   background-position: center;
-  /* display: none; */
+  display: none;  
+}
+.sign-up-wrapper .show{
+  display: block
 }
 a {
   cursor: pointer;
@@ -204,7 +207,7 @@ a {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgb(235, 240, 245);
   padding: 50;
 }
 
